--- a/package.json
+++ b/package.json
@@ -8,7 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.22"
+    "axios": "^0.18.0",
+    "axios-jsonp-pro": "^1.1.4",
+    "sweetalert2": "^7.33.1",
+    "vue": "^2.5.22",
+    "vue-axios": "^2.1.3",
+    "vue-bus": "^1.1.0",
+    "vue-jsonp": "^0.1.8",
+    "vue-lodash": "^2.0.0",
+    "vue-router": "^3.0.1",
+    "vue-slide-up-down": "^1.4.1",
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
@@ -17,6 +28,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^1.3.3",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
