--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "axios": "^0.18.0",
     "axios-jsonp-pro": "^1.1.4",
     "sweetalert2": "^7.33.1",
+    "verte": "0.0.10",
     "vue": "^2.5.22",
     "vue-axios": "^2.1.3",
     "vue-bus": "^1.1.0",
+    "vue-clipboard2": "^0.3.0",
+    "vue-codemirror-lite": "^1.0.4",
+    "vue-image-crop-upload": "^2.5.0",
     "vue-jsonp": "^0.1.8",
     "vue-lodash": "^2.0.0",
     "vue-router": "^3.0.1",
     "vue-slide-up-down": "^1.4.1",
+    "vuedraggable": "^2.20.0",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
